[package]
name = "dracula-ldr"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"

defmt-rtt = "0.4"
panic-probe = { version = "0.3" }

embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "dc18ee2", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "integrated-timers",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "dc18ee2" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "dc18ee2", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
